--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 ### your site title here
 
-title: Boreal's slice of the Web
+title: Alexander Tsuetaki's Fiefdom on the Internet
 
 permalink: /:title
 
